--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,25 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "Jingyi(Kylie) He | 何靖怡"
+author: "Jingyi(Kylie) He"
 description: "Really cool blog about ... something"
 permalink: /:title/
 lang: "en"
 
-show_footer: false           # show the "previous" and "next" links at the end of each post
-dark_theme: false            # use the dark mode as default
+show_footer: true           # show the "previous" and "next" links at the end of each post
+dark_theme: true            # use the dark mode as default
 dark_header: true            # keep the header dark
 dark_footer: false           # keep the footer dark
 # style: minimal             # use a simpler style inspired by the minima theme
+mathjax: true
 
 navigation:                  # site navigation in the header
   - README.md
-  - Github: "http://github.com/niklasbuschmann/contrast"
+  - technical_posts.html
+  - personal_posts.html
 
-#icons:                      # icons in the header, see http://fontawesome.com/icons
-#  envelope: "mailto:niklasbuschmann@users.noreply.github.com"
-#  github: "https://github.com/niklasbuschmann/contrast"
-#  rss: "/contrast/feed.xml"
+icons:                      # icons in the header, see http://fontawesome.com/icons
+ envelope: 
+ github: "https://github.com/kylie-box"
+ rss: "feed.xml"
 
 comments:                    # embed disqus or isso comments
 #  disqus: ""
