--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ dark_footer: false           # keep the footer dark
 mathjax: true
 
 navigation:                  # site navigation in the header
-  - main.md
+  - index.html
   - technical_posts.html
   - personal_posts.html
 
