--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,5 @@ comments:                    # embed disqus or isso comments
 plugins:
  - jekyll-feed
  - jekyll-default-layout
+
+theme: jekyll-theme-slate
